# deepbridge-synthetic

./: .coverage  CHANGELOG.md  README.md  RELEASE_NOTES_SYNTHETIC_v2.0.0.md  pyproject.toml
.github/workflows/: tests.yml
deepbridge_synthetic/: __init__.py  base.py  base_generator.py  standard_generator.py  synthesizer.py
deepbridge_synthetic/core/: __init__.py  dask_manager.py  data_generator.py  data_processor.py  metrics_calculator.py  report_generator.py
deepbridge_synthetic/methods/: __init__.py  gaussian_copula.py
deepbridge_synthetic/methods/future_methods/: __init__.py
deepbridge_synthetic/metrics/: __init__.py  privacy.py  statistical.py  synthetic_metrics.py  utility.py
deepbridge_synthetic/metrics/similarity/: __init__.py  data_enhancement.py  privacy_assessment.py  similarity_core.py  similarity_utils.py  visualization_utils.py
deepbridge_synthetic/utils/: __init__.py  bernoulli_custom.py  transformers.py  validators.py
examples/: gaussian_copula_example.py
tests/: conftest.py  test_base_generator.py  test_metrics_init.py  test_similarity_init.py
tests/test_utils/: test_validators.py
